--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>me.ahmedy.maven</groupId>
 	<artifactId>CSVObjectify</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>CSVObjectify</name>
@@ -13,6 +13,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<bintray.repo>bintray-ahmedalyousif/CSVObjectivy</bintray.repo>
+        <bintray.package>CSVObjectivy</bintray.package>
 	</properties>
 
 	<dependencies>
@@ -28,4 +30,27 @@
 			<version>3.8</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.3.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>2.1.2</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<distributionManagement>
+	  <repository>
+		  <id>bintray-ahmedalyousif-CSVObjectivy</id>
+		  <name>ahmedalyousif-CSVObjectivy</name>
+	      <url>https://api.bintray.com/maven/ahmedalyousif/CSVObjectivy/CSVObjectivy/;publish=1</url>
+	  </repository>
+	</distributionManagement>
 </project>
