update ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ local.properties
 # Edit at https://www.gitignore.io/?templates=visualstudiocode
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
