--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0          http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>me.ahmedy.maven</groupId>
+	<groupId>me.ahmedy.java</groupId>
 	<artifactId>CSVObjectify</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.6</version>
 	<packaging>jar</packaging>
 
 	<name>CSVObjectify</name>
@@ -37,20 +37,33 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.3.2</version>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.0.1</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals><goal>jar</goal></goals> 
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-source-plugin</artifactId>
-					<version>2.1.2</version>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
 	<distributionManagement>
 	  <repository>
-		  <id>bintray-AhmedAlYousif-java</id>
+		  <id>bintray-ahmedalyousif-java</id>
 		  <name>ahmedalyousif-java</name>
 	      <url>https://api.bintray.com/maven/ahmedalyousif/java/CSVObjectivy/;publish=1</url>
 	  </repository>
